--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "fpPrototype.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "web-dev-server --node-resolve --open --watch"
+    "start": "web-dev-server --node-resolve --open --watch",
+    "build": "rollup --config"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,9 @@
     "p5": "^1.6.0"
   },
   "devDependencies": {
-    "@web/dev-server": "^0.1.35"
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@web/dev-server": "^0.1.35",
+    "rollup": "^2.79.1",
+    "rollup-plugin-copy": "^3.4.0"
   }
 }
